[gd_scene format=3 uid="uid://qap2kv8o04m6"]

[ext_resource type="FontFile" uid="uid://buul432qy6di5" path="res://ui/theme/fonts/font_title_small.tres" id="1"]
[ext_resource type="FontFile" uid="uid://pba5t1ekfnca" path="res://ui/theme/fonts/font_button_small.tres" id="2"]
[ext_resource type="StyleBox" path="res://ui/theme/panel_darker.tres" id="3"]
[ext_resource type="Theme" path="res://ui/theme/gdscript_app_theme.tres" id="4"]
[ext_resource type="Script" uid="uid://c3wm1x3tx0xbk" path="res://ui/screens/lesson/UIPracticeButton.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://botjmjx4xso5i" path="res://ui/icons/checkmark_valid.svg" id="6"]
[ext_resource type="StyleBox" path="res://ui/theme/focus.tres" id="7"]
[ext_resource type="StyleBox" path="res://ui/theme/button_outline_large_hover.tres" id="8"]
[ext_resource type="StyleBox" path="res://ui/theme/button_outline_large_pressed.tres" id="9"]
[ext_resource type="FontFile" path="res://ui/theme/fonts/font_button.tres" id="10"]
[ext_resource type="StyleBox" path="res://ui/theme/pill.tres" id="11"]
[ext_resource type="StyleBox" path="res://ui/theme/button_outline_large_normal.tres" id="12"]

[node name="UIPracticeButton" type="PanelContainer" unique_id=981791674 node_paths=PackedStringArray("_title_label", "_description_label")]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 110.0
theme = ExtResource("4")
theme_override_styles/panel = ExtResource("3")
script = ExtResource("5")
_title_label = NodePath("Margin/Row/Column/Row/Title")
_description_label = NodePath("Margin/Row/Column/Description")

[node name="Margin" type="MarginContainer" parent="." unique_id=693682664]
layout_mode = 2
size_flags_horizontal = 3

[node name="Row" type="HBoxContainer" parent="Margin" unique_id=575576514]
layout_mode = 2

[node name="Column" type="VBoxContainer" parent="Margin/Row" unique_id=672909078]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Row" type="HBoxContainer" parent="Margin/Row/Column" unique_id=1059949194]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Margin/Row/Column/Row" unique_id=2050276291]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
text = "Practice title"

[node name="CompletedBeforeIcon" type="TextureRect" parent="Margin/Row/Column/Row" unique_id=2019534497]
modulate = Color(0.239216, 1, 0.431373, 1)
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
tooltip_text = "You've already completed this practice before.
You can give it another go if you want to test your skills!"
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="NextPill" type="Label" parent="Margin/Row/Column/Row" unique_id=1243440833]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_styles/normal = ExtResource("11")
text = "next"

[node name="Description" type="RichTextLabel" parent="Margin/Row/Column" unique_id=836348556]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true

[node name="NavigateButton" type="Button" parent="Margin/Row" unique_id=1226804429]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Open this practice."
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("12")
theme_override_styles/pressed = ExtResource("9")
theme_override_styles/hover = ExtResource("8")
theme_override_styles/focus = ExtResource("7")
text = "Practice"

[node name="NoNavigationLabel" type="Label" parent="Margin/Row" unique_id=812984698]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.290196, 0.294118, 0.388235, 1)
theme_override_fonts/font = ExtResource("10")
text = "You are here"
